# University

./: 1hometask.c  1lesson.c  2hometask  2practice.c  3.4practice.c  3hometask  3hometask.c  3practice  3practice.c  4practice.c  5.1homework.c  5.2homework  5.2homework.c  5.5homework  5.5homework.c  6practice  6practice.c  CMakeLists.txt  a  a.c  contest  contest.c  file1.txt  helloworld  practic1  practic1.c  test  test.c
10p/: 1  10.1p  10.1p.c  10.2p  10.2p.c  test
11p/: 11.3p  11.3p.c  11.4p  11.4p.c  p3  p3.c  t.c  t2.c  t3.c
1h/: 1hometask
1l/: 1lesson
2h/: 2hometask.c
2l/: 2  2.c
2p/: 2practice
3h/: 3hometask  3hometask.c
3p/: 3.2practice  3.2practice.c  3.3practice  3.3practice.c  3.4practice  3.4practice.c
4h/: 4.c
4p/: 4practice
5h/: 5.1homework  5.2homework  5.2homework.c  5.5homework  5.5homework.c
6h/: 3c.txt  6.1homework  6.1homework.c  6.2homework  6.2homework.c  6homework
7h/: 1  7.1h  7.1h.c  7.2h  7.2h.c
8p/: 1  1new  8.1p  8.1p.c
9p/: 1  9.1.readfregul  9.1.readfregul.c  9.1p  9.1p.c  9.1readf  9.1readf.c  9.2p  9.2p.c  9.3  9.3.c
shell/: boot  boot.c  file1.txt  test_commands.txt
